# ghc-proxy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  ghc-proxy-design.md  pyproject.toml  todo.md
deploy/docker/: docker-compose.yaml
deploy/k8s/: 00-namespace.yaml  10-config.yaml  20-proxy.yaml  30-refresher.yaml  40-console.yaml  README.md
docs/superpowers/specs/: 2026-06-11-admin-console-design.md
examples/: README.md  package-lock.json  package.json  tsconfig.json
examples/config/: ghc-proxy.example.yaml
examples/db/: schema.sql
examples/docker/: docker-compose.yaml
examples/k8s/: proxy-deployment.yaml  refresher-deployment.yaml
examples/src/common/: config.ts  crypto.ts
examples/src/credential/: deviceFlow.ts  refresher.ts  refresherMain.ts  tokenExchange.ts
examples/src/proxy/: anthropicAdapter.ts  server.ts
examples/src/router/: binding.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.ts  components.tsx  email.test.ts  email.ts  styles.css
frontend/src/pages/: Accounts.tsx  Bindings.tsx  Login.tsx  Usage.tsx  Users.tsx
src/ghcproxy/: __main__.py  cache.py  context.py
src/ghcproxy/admin/: api.py
src/ghcproxy/common/: config.py  keys.py  (+1 more)
tests/: fakes.py  test_admin_console.py  test_app_api.py  test_auth.py  test_binding.py  test_config.py  test_credential.py  test_crypto.py  test_deviceflow.py  test_forwarder.py  test_headers.py  test_keys.py  test_packaging.py  test_refresher.py  test_token_service.py  test_upstream.py  test_usage.py
(+15 files in other folders)
