[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghcproxy"
version = "0.1.0"
description = "GHC Proxy — wraps GitHub Copilot's model API into a unified, multi-tenant endpoint compatible with Claude Code / Codex / OpenClaw."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "asyncpg>=0.29",
  "redis>=5.0",
  "aiokafka>=0.10",
  "cryptography>=42.0",
  "PyYAML>=6.0",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "anyio>=4.3",
]

[project.scripts]
ghcproxy = "ghcproxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ghcproxy.db" = ["*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
